--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>Weather For You</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v6.0.0-beta3/css/all.css" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" />
     <link rel="stylesheet" href="style.css" />
@@ -11,224 +11,161 @@
   <body>
     <div class="container">
       <div class="header">
-        <h2>Weather</h2>
+        <h2>Weather From Sen</h2>
+
         <div class="weather-input">
-          <input type="text" id="city_input" placeholder="Enter city name" />
-          <button id="searchBtn"><i class="fa-regular fa-search"></i></button>
+          <div class="input-group">
+            <input type="text" id="city_input" placeholder="Enter city name" />
+            <button id="searchBtn"><i class="fa-regular fa-search"></i></button>
+          </div>
+          <div class="search-suggestions"></div>
           <button id="locationBtn"><i class="bx bx-target-lock"></i> Current Location</button>
         </div>
+
+        <div class="header-right">
+          <div class="unit-toggle">
+            <span class="unit-c active">&deg;C</span>
+            <span class="unit-f">&deg;F</span>
+          </div>
+          <button id="theme-toggle" class="theme-btn">
+            <i class="fa-light fa-sun"></i>
+          </button>
+        </div>
+      </div>
+      <div class="loading-overlay">
+        <div class="spinner"></div>
       </div>
 
       <div class="weather-data">
         <div class="weather-left">
           <div class="card current-weather">
-            <div class="details">
+            <div class="card-header">
               <p>Now</p>
-              <h2>--°C</h2>
-              <p>----</p>
-              <div class="high-low-temp">
-                <p><i class="fa-light fa-arrow-up"></i> H: --°</p>
-                <p><i class="fa-light fa-arrow-down"></i> L: --°</p>
-              </div>
+              <i id="favoriteBtn" class="fa-regular fa-star"></i>
             </div>
+            <div class="details"></div>
             <div class="weather-icon">
-              <img src="https://openweathermap.org/img/wn/04d@2x.png" alt="" />
-            </div>
-            <hr />
-            <div class="card-footer">
-              <p><i class="fa-light fa-calendar"></i> ----</p>
-              <p><i class="fa-light fa-location-dot"></i> ----</p>
+              <img src="https://openweathermap.org/img/wn/04d@2x.png" alt="weather icon" />
             </div>
           </div>
 
           <div class="card day-forecast">
             <h2>5 days Forecast</h2>
-            <div class="forecast-item">
-              <div class="icon-wrapper">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="" />
+          </div>
+
+          <div class="card favorites-card">
+            <h2>Favorite Locations</h2>
+            <div id="favoritesList" class="favorites-list"></div>
+          </div>
+        </div>
+
+        <div class="card highlights">
+          <h2>Today's Highlights</h2>
+          <div class="highlights-container">
+            <div class="highlights-item air-quality-card">
+              <div class="header-item">
+                <p>Air Quality Index</p>
+                <p class="bad" id="air-quality-status">--</p>
               </div>
-              <p>---</p>
-              <p class="day-temp">--° / --°</p>
+              <div class="air-quality-details">
+                <div class="air-quality-data">
+                  <i class="fa-light fa-wind"></i>
+                  <p>PM2.5</p>
+                  <p id="pm2_5">---</p>
+                </div>
+                <div class="air-quality-data">
+                  <i class="fa-light fa-wind"></i>
+                  <p>PM10</p>
+                  <p id="pm10">---</p>
+                </div>
+                <div class="air-quality-data">
+                  <i class="fa-light fa-wind"></i>
+                  <p>SO2</p>
+                  <p id="so2">---</p>
+                </div>
+                <div class="air-quality-data">
+                  <i class="fa-light fa-wind"></i>
+                  <p>CO</p>
+                  <p id="co">---</p>
+                </div>
+                <div class="air-quality-data">
+                  <i class="fa-light fa-wind"></i>
+                  <p>NO2</p>
+                  <p id="no2">---</p>
+                </div>
+                <div class="air-quality-data">
+                  <i class="fa-light fa-wind"></i>
+                  <p>NH3</p>
+                  <p id="nh3">---</p>
+                </div>
+                <div class="air-quality-data">
+                  <i class="fa-light fa-wind"></i>
+                  <p>O3</p>
+                  <p id="o3">---</p>
+                </div>
+              </div>
             </div>
-            <div class="forecast-item">
-              <div class="icon-wrapper">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="" />
+            <div class="highlights-item sunrise-sunset-card">
+              <div class="header-item">
+                <p>Sunrise & Sunset</p>
               </div>
-              <p>---</p>
-              <p class="day-temp">--° / --°</p>
+              <div class="sunrise-sunset-details">
+                <div class="sun-item">
+                  <i class="fa-light fa-sun"></i>
+                  <p>Sunrise</p>
+                  <p id="sunrise-time">---</p>
+                </div>
+                <div class="sun-item">
+                  <i class="fa-light fa-moon"></i>
+                  <p>Sunset</p>
+                  <p id="sunset-time">---</p>
+                </div>
+              </div>
             </div>
-            <div class="forecast-item">
-              <div class="icon-wrapper">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="" />
+            <div class="highlights-item">
+              <p>Humidity</p>
+              <div class="detail-item">
+                <i class="fa-light fa-droplet-percent"></i>
+                <span id="humidity">---</span>
               </div>
-              <p>---</p>
-              <p class="day-temp">--° / --°</p>
             </div>
-            <div class="forecast-item">
-              <div class="icon-wrapper">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="" />
+            <div class="highlights-item">
+              <p>Pressure</p>
+              <div class="detail-item">
+                <i class="fa-light fa-gauge"></i>
+                <span id="pressure">---</span>
               </div>
-              <p>---</p>
-              <p class="day-temp">--° / --°</p>
             </div>
-            <div class="forecast-item">
-              <div class="icon-wrapper">
-                <img src="https://openweathermap.org/img/wn/02d.png" alt="" />
+            <div class="highlights-item">
+              <p>Visibility</p>
+              <div class="detail-item">
+                <i class="fa-light fa-eye"></i>
+                <span id="visibility">---</span>
               </div>
-              <p>---</p>
-              <p class="day-temp">--° / --°</p>
+            </div>
+            <div class="highlights-item">
+              <p>Wind Speed</p>
+              <div class="detail-item">
+                <i class="fa-light fa-wind"></i>
+                <span id="wind-speed">---</span>
+              </div>
+            </div>
+            <div class="highlights-item">
+              <p>Feels Like</p>
+              <div class="detail-item">
+                <i class="fa-light fa-temperature-half"></i>
+                <span id="feels-like">---</span>
+              </div>
             </div>
           </div>
         </div>
 
-        <div class="weather-right">
-          <div class="card highlights">
-            <h2>Today's Highlights</h2>
-            <div class="highlights-container">
-              <div class="highlights-item air-quality-card">
-                <div class="header-item">
-                  <p>Air Quality Index</p>
-                  <p class="bad">Very Poor</p>
-                </div>
-                <div class="air-quality-details">
-                  <div class="air-quality-data">
-                    <i class="fa-light fa-wind"></i>
-                    <p>PM2.5</p>
-                    <p>---</p>
-                  </div>
-                  <div class="air-quality-data">
-                    <i class="fa-light fa-wind"></i>
-                    <p>PM10</p>
-                    <p>---</p>
-                  </div>
-                  <div class="air-quality-data">
-                    <i class="fa-light fa-wind"></i>
-                    <p>SO2</p>
-                    <p>---</p>
-                  </div>
-                  <div class="air-quality-data">
-                    <i class="fa-light fa-wind"></i>
-                    <p>CO</p>
-                    <p>---</p>
-                  </div>
-                  <div class="air-quality-data">
-                    <i class="fa-light fa-wind"></i>
-                    <p>NO2</p>
-                    <p>---</p>
-                  </div>
-                  <div class="air-quality-data">
-                    <i class="fa-light fa-wind"></i>
-                    <p>NH3</p>
-                    <p>---</p>
-                  </div>
-                  <div class="air-quality-data">
-                    <i class="fa-light fa-wind"></i>
-                    <p>O3</p>
-                    <p>---</p>
-                  </div>
-                </div>
-              </div>
-              <div class="highlights-item sunrise-sunset-card">
-                <div class="header-item">
-                  <p>Sunrise & Sunset</p>
-                </div>
-                <div class="sunrise-sunset-details">
-                  <div class="sun-item">
-                    <i class="fa-light fa-sun"></i>
-                    <p>Sunrise</p>
-                    <p>---</p>
-                  </div>
-                  <div class="sun-item">
-                    <i class="fa-light fa-moon"></i>
-                    <p>Sunset</p>
-                    <p>---</p>
-                  </div>
-                </div>
-              </div>
-              <div class="highlights-item">
-                <p>Humidity</p>
-                <div class="detail-item">
-                  <i class="fa-light fa-droplet-percent"></i>
-                  <span>---</span>
-                </div>
-              </div>
-              <div class="highlights-item">
-                <p>Pressure</p>
-                <div class="detail-item">
-                  <i class="fa-light fa-gauge"></i>
-                  <span>---</span>
-                </div>
-              </div>
-              <div class="highlights-item">
-                <p>Visibility</p>
-                <div class="detail-item">
-                  <i class="fa-light fa-eye"></i>
-                  <span>---</span>
-                </div>
-              </div>
-              <div class="highlights-item">
-                <p>Wind Speed</p>
-                <div class="detail-item">
-                  <i class="fa-light fa-wind"></i>
-                  <span>---</span>
-                </div>
-              </div>
-              <div class="highlights-item">
-                <p>Feels Like</p>
-                <div class="detail-item">
-                  <i class="fa-light fa-temperature-half"></i>
-                  <span>---</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card hourly-forecast">
-            <h2>Today at</h2>
-            <div class="hourly-forecast-container">
-              <div class="hourly-item">
-                <p>-- AM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-              <div class="hourly-item">
-                <p>-- AM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-              <div class="hourly-item">
-                <p>-- AM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-              <div class="hourly-item">
-                <p>-- PM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-              <div class="hourly-item">
-                <p>-- PM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-              <div class="hourly-item">
-                <p>-- PM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-              <div class="hourly-item">
-                <p>-- AM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-              <div class="hourly-item">
-                <p>-- AM</p>
-                <img src="https://openweathermap.org/img/wn/04d.png" alt="" />
-                <span>--°C</span>
-              </div>
-            </div>
-          </div>
+        <div class="card hourly-forecast">
+          <h2>Today at</h2>
+          <div class="hourly-forecast-container"></div>
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
